Fixing layout of containers

--- a/css/style.css
+++ b/css/style.css
@@ -44,17 +44,17 @@
   display: flex;
   flex-direction: column;
   background-color: inherit;
+  margin: 0 auto;
   padding: 5rem 0; }
 
 .technologies__primary {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 800;
-  letter-spacing: 0.8rem;
-  text-align: center;
-  margin-bottom: 10rem;
-  padding: 2rem;
-  color: #fff;
-  opacity: 70%; }
+  letter-spacing: 0.6rem;
+  justify-content: start;
+  margin-bottom: 7rem;
+  padding-left: 7rem;
+  color: #fff; }
 
 .technologies__cards {
   margin: 0 auto;
@@ -120,7 +120,7 @@
 .technologies {
   background-image: linear-gradient(to right, #ff99b9, #f3d34a);
   margin: 0 auto;
-  padding: 25rem 0 25rem 0; }
+  padding: 25rem 25rem; }
 
 .section-contact {
   margin: 0 auto;
