--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,7 +38,7 @@
 .technologies {
   background-image: linear-gradient(to right, #ff99b9, #f3d34a);
   margin: 0 auto;
-  padding: 25rem 0 25rem 0;
+  padding: 25rem 25rem;
 }
 
 // Contact section -------------------------------------------
